--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="src/styles/main.css">
     <title>TOP - Landing Page</title>
 </head>
@@ -42,7 +43,7 @@
                         Sign up
                     </a>
                 </div>
-                <div class="top-section img"></div>
+                <div class="top-section-img"></div>
             </div>
         </div>
 
