add images to gallery cards and css animation

--- a/index.html
+++ b/index.html
@@ -58,28 +58,36 @@
                 <div class="gallery-cards">
 
                     <div class="cards-item">
-                        <div class="cards-item-img"></div>
+                        <div class="cards-item-img">
+                            <img src="https://img.icons8.com/sf-regular/96/partly-cloudy-day.png" alt="partly-cloudy-day"/>
+                        </div>
                         <p class="cards-item-text">
                             this is some subtext under an illustration or image
                         </p>
                     </div>
 
                     <div class="cards-item">
-                        <div class="cards-item-img"></div>
+                        <div class="cards-item-img">
+                            <img src="https://img.icons8.com/sf-regular/96/storm.png" alt="storm"/>
+                        </div>
                         <p class="cards-item-text">
                             this is some subtext under an illustration or image
                         </p>
                     </div>
 
                     <div class="cards-item">
-                        <div class="cards-item-img"></div>
+                        <div class="cards-item-img">
+                            <img src="https://img.icons8.com/sf-regular/96/sun.png" alt="sun"/>
+                        </div>
                         <p class="cards-item-text">
                             this is some subtext under an illustration or image
                         </p>
                     </div>
 
                     <div class="cards-item">
-                        <div class="cards-item-img"></div>
+                        <div class="cards-item-img">
+                            <img src="https://img.icons8.com/sf-regular/96/snow-storm.png" alt="snow-storm"/>
+                        </div>
                         <p class="cards-item-text">
                             this is some subtext under an illustration or image
                         </p>
