--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
 
         <div class="footer">
-            Copyright &copy The Odin Project 2021
+            Copyright &copy; The Odin Project 2021
         </div>
 
     </div>
